bpo-36650: Fix handling of empty keyword args in C version of lru_cache.